--- a/simulation/docker/ci/Dockerfile
+++ b/simulation/docker/ci/Dockerfile
@@ -19,13 +19,24 @@ xvfb
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive xargs --arg-file=/packages_focal.txt apt-get install -y
 
 # Install pip packages
-RUN pip3 install --no-warn-script-location -r /requirements.txt
+RUN pip3 install --upgrade --upgrade-strategy eager --no-warn-script-location \
+    -r /requirements.txt
 # Install documentation and machine learning packages as well
-RUN if [ "$INSTALL_DOC_PACKAGES" = "true" ]; then pip3 install --no-warn-script-location -r /requirements_documentation.txt; fi
-RUN if [ "$INSTALL_ML_PACKAGES" = "true" ]; then pip3 install --no-warn-script-location -r /requirements_machine_learning.txt; fi
+RUN if [ "$INSTALL_DOC_PACKAGES" = "true" ]; then \
+    pip3 install --upgrade --upgrade-strategy eager --no-warn-script-location \
+    -r /requirements_documentation.txt; \
+    fi
+RUN if [ "$INSTALL_ML_PACKAGES" = "true" ]; then \
+    pip3 install --upgrade --upgrade-strategy eager --no-warn-script-location \
+    -r /requirements_machine_learning.txt; \
+    fi
 
-RUN if [ "$INSTALL_NODE_JS" = "true" ]; then curl -sL https://deb.nodesource.com/setup_12.x | bash && apt-get update && apt-get install nodejs -y && npm i -g @dvcorg/cml; fi
-
+RUN if [ "$INSTALL_NODE_JS" = "true" ]; then \
+    curl -sL https://deb.nodesource.com/setup_12.x | bash \
+    && apt-get update \
+    && apt-get install nodejs -y \
+    && npm i -g @dvcorg/cml; \
+    fi
 
 # Reduce image size by removing apt cache
 RUN rm -rf /var/lib/apt/lists/*
