docker: Install additional pip packages in ci image, depending on tag
Depending on the individual CI jobs, different requirements are necessary.
These changes allow to create separate docker images for special CI jobs.

--- a/simulation/docker/ci/Dockerfile
+++ b/simulation/docker/ci/Dockerfile
@@ -1,5 +1,9 @@
 FROM ros:noetic-robot-focal
 
+ARG INSTALL_DOC_PACKAGES=false
+ARG INSTALL_ML_PACKAGES=false
+ARG INSTALL_NODE_JS=false
+
 COPY init/* /
 
 # Ensure that ROS packages are up-to-date
@@ -17,8 +21,11 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive xargs --arg-file=/packages_
 # Install pip packages
 RUN pip3 install --no-warn-script-location -r /requirements.txt
 # Install documentation and machine learning packages as well
-RUN pip3 install --no-warn-script-location -r /requirements_documentation.txt
-RUN pip3 install --no-warn-script-location -r /requirements_machine_learning.txt
+RUN if [ "$INSTALL_DOC_PACKAGES" = "true" ]; then pip3 install --no-warn-script-location -r /requirements_documentation.txt; fi
+RUN if [ "$INSTALL_ML_PACKAGES" = "true" ]; then pip3 install --no-warn-script-location -r /requirements_machine_learning.txt; fi
+
+RUN if [ "$INSTALL_NODE_JS" = "true" ]; then curl -sL https://deb.nodesource.com/setup_12.x | bash && apt-get update && apt-get install nodejs -y && npm i -g @dvcorg/cml; fi
+
 
 # Reduce image size by removing apt cache
 RUN rm -rf /var/lib/apt/lists/*
