--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -128,35 +128,6 @@ test-drive-evaluation:
     # Drive into the blocked area
     - rostest simulation_evaluation drive.test time_limit:=300 road:=ci_roads/blocked_area automatic_drive:=true expected_result_state:=3
 
-test-cyclegan:
-  image: git.kitcar-team.de:4567/kitcar/kitcar-gazebo-simulation/ci:machine_learning
-  stage: test
-  variables:
-    INIT_INPUT: '1\nyy'
-  only:
-    changes:
-      - data/real_images.dvc
-      - data/simulated_images/**/*
-      - simulation/utils/machine_learning/**/*
-  tags:
-    - workstation
-  script:
-    - git lfs pull --include=simulation/utils/machine_learning/cycle_gan/resources/mask.png
-    - dvc pull data/real_images/maschinen_halle_parking --run-cache
-    - dvc pull data/simulated_images/complex_road.dvc --run-cache
-    - cd simulation/utils/machine_learning/cycle_gan
-    # pull cache from server and checkout
-    - dvc pull train_dr_drift_256 --run-cache
-    # Test current model, make videos and gif, and commit to dvc
-    - dvc repro test_dr_drift_256 -s
-    - dvc commit test_dr_drift_256
-    - dvc repro make_video_dr_drift_256 -s
-    - dvc commit make_video_dr_drift_256
-    - dvc repro stacked_gif_dr_drift_256 -s
-    - dvc commit stacked_gif_dr_drift_256
-    # Push to dvc remote
-    - dvc push
-
 test-documentation:
   image: git.kitcar-team.de:4567/kitcar/kitcar-gazebo-simulation/ci:docs
   stage: test
@@ -193,24 +164,39 @@ cml-cyclegan:
   image: git.kitcar-team.de:4567/kitcar/kitcar-gazebo-simulation/ci:machine_learning
   variables:
     INIT_INPUT: '1\nyy'
+  tags:
+    - workstation
   only:
     changes:
       - data/real_images.dvc
-      - data/simulated_images.dvc
-      - simulation/utils/machine_learning/
+      - data/simulated_images/**/*
+      - simulation/utils/machine_learning/**/*
   script:
-    # pull cache from server and checkout
+    - git lfs pull --include=simulation/utils/machine_learning/cycle_gan/resources/mask.png
+    - dvc pull data/real_images/maschinen_halle_parking --run-cache
+    - dvc pull data/simulated_images/complex_road.dvc --run-cache
     - cd simulation/utils/machine_learning/cycle_gan
-    - dvc pull train_dr_drift_256 --run-cache # for loss.png
-    - dvc pull make_video_dr_drift_256 --run-cache # for stacked video
-    - dvc pull stacked_gif_dr_drift_256 --run-cache # for stacked gif
+    # pull cache from server and checkout
+    - dvc pull dvc.yaml --run-cache
+    # Test current model, make videos and commit to dvc
+    - dvc repro test_dr_drift_256 -s
+    - dvc repro test_discriminators_dr_drift_256 -s
+    - dvc repro make_video_dr_drift_256 -s
     - cd ../../../../
     # Create content for the report.md
-    - echo "## Dr Drift 256" >> report.md
-    - echo "# Translated video" >> report.md
+    - echo "# Dr Drift 256" >> report.md
+    - echo "## Test Generators" >> report.md
     - cml-publish simulation/utils/machine_learning/cycle_gan/results/dr_drift_256/stacked.mp4 --gitlab-uploads --md --title 'MP4' >> report.md
     - echo "<br>" >> report.md
-    - echo "# Loss values" >> report.md
+    - echo "## Test Discriminators" >> report.md
+    - losses=`cat simulation/utils/machine_learning/cycle_gan/results/dr_drift_256/discriminator_losses.txt`
+    - A="$(cut -d',' -f1 <<<"$losses")"
+    - B="$(cut -d',' -f2 <<<"$losses")"
+    - echo "**AVG-Loss Discriminator A =** $A" >> report.md
+    - echo "<br>" >> report.md
+    - echo "**AVG-Loss Discriminator B =** $B" >> report.md
+    - echo "<br>" >> report.md
+    - echo "## Loss values" >> report.md
     - cml-publish simulation/utils/machine_learning/cycle_gan/checkpoints/dr_drift_256/loss.png --gitlab-uploads --md --title 'Loss values' >> report.md
     # Send report.md as comment
     - cml-send-comment report.md
