--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -255,10 +255,10 @@ cml-cyclegan:
     - cd simulation/docker/ci
     - /bin/sh build.sh base $TAG_CI_IMAGE
     - docker push $CI_REGISTRY/kitcar/kitcar-gazebo-simulation/ci:$TAG_CI_IMAGE
-    - /bin/sh build.sh docs $TAG_CI_IMAGE_DOCS
-    - docker push $CI_REGISTRY/kitcar/kitcar-gazebo-simulation/ci:$TAG_CI_IMAGE_DOCS
-    - /bin/sh build.sh machine_learning $TAG_CI_IMAGE_ML
+    - /bin/sh build.sh machine_learning $TAG_CI_IMAGE_ML $TAG_CI_IMAGE
     - docker push $CI_REGISTRY/kitcar/kitcar-gazebo-simulation/ci:$TAG_CI_IMAGE_ML
+    - /bin/sh build.sh docs $TAG_CI_IMAGE_DOCS $TAG_CI_IMAGE_ML
+    - docker push $CI_REGISTRY/kitcar/kitcar-gazebo-simulation/ci:$TAG_CI_IMAGE_DOCS
     # Test building the default image
     - cd ../default
     - /bin/sh build.sh $CI_REGISTRY $TAG_CI_IMAGE $TAG_DEFAULT_IMAGE_CI $KITCAR_REPO_PATH
