datasets: Add dvc stage to create images for cycle gan testing

--- a/data/simulated_images/dvc.yaml
+++ b/data/simulated_images/dvc.yaml
@@ -15,3 +15,13 @@ stages:
     - ../../simulation/models/meshes
     outs:
     - random_roads
+  create_test_images:
+    cmd: python3 -m simulation.utils.machine_learning.data.extract_simulated_images
+     --road ci_roads/random_road --seed TEST --output_dir test_images
+     --randomize_path 0 --image_topic /camera/image_raw
+     && fdupes -dN test_images/  # Remove duplicates
+    deps:
+    - ../../simulation/models/env_db/ci_roads/random_road.py
+    - ../../simulation/models/meshes
+    outs:
+    - test_images
