--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -170,7 +170,7 @@ cml-cyclegan:
   script:
     - git lfs pull --include=simulation/utils/machine_learning/cycle_gan/resources/mask.png
     - dvc pull data/real_images/maschinen_halle_parking --run-cache
-    - dvc pull data/simulated_images/complex_road.dvc --run-cache
+    - dvc pull data/simulated_images/test_images --run-cache
     - cd simulation/utils/machine_learning/cycle_gan
     # pull cache from server and checkout
     - dvc pull dvc.yaml --run-cache
