--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,7 @@ repos:
 - repo: https://github.com/ambv/black
   rev: stable
   hooks:
-    - id: black
+  - id: black
 - repo: https://github.com/asottile/seed-isort-config
   rev: v1.9.3
   hooks:
@@ -19,9 +19,25 @@ repos:
 - repo: https://github.com/myint/docformatter
   rev: v1.3.1
   hooks:
-    - id: docformatter
-      args: [-i, --wrap-summaries, "92", --wrap-descriptions, "92"]
+  - id: docformatter
+    args: [-i, --wrap-summaries, '92', --wrap-descriptions, '92']
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v2.3.0
   hooks:
-    - id: flake8
+  - id: flake8
+- repo: https://github.com/iterative/dvc
+  rev: master
+  hooks:
+  - id: dvc-pre-commit
+    language_version: python3
+    stages:
+    - commit
+  - id: dvc-pre-push
+    language_version: python3
+    stages:
+    - push
+  - id: dvc-post-checkout
+    language_version: python3
+    stages:
+    - post-checkout
+    always_run: true
