--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,6 +68,7 @@ test-machine-learning-package:
     INIT_INPUT: 1\nyy
   script:
   - python3 -m simulation.utils.machine_learning.models.test
+  - python3 -m simulation.utils.machine_learning.cycle_gan.models.test
 
 test-ros-packages:
   stage: test
