--- a/simulation/utils/machine_learning/cycle_gan/dvc.yaml
+++ b/simulation/utils/machine_learning/cycle_gan/dvc.yaml
@@ -2,18 +2,18 @@ stages:
   train_dr_drift_256:
     cmd: python3 train.py
     deps:
-      - ./../../../../data/real_images/beg_2019
-      - ./../../../../data/real_images/maschinen_halle
-      - ./../../../../data/real_images/maschinen_halle_no_obstacles
-      - ./../../../../data/simulated_images/random_roads
-      - configs
+    - ./../../../../data/real_images/beg_2019
+    - ./../../../../data/real_images/maschinen_halle
+    - ./../../../../data/real_images/maschinen_halle_no_obstacles
+    - ./../../../../data/simulated_images/random_roads
+    - configs
     outs:
-      - checkpoints/dr_drift_256/latest_net_d_a.pth
-      - checkpoints/dr_drift_256/latest_net_d_b.pth
-      - checkpoints/dr_drift_256/latest_net_g_a_to_b.pth
-      - checkpoints/dr_drift_256/latest_net_g_b_to_a.pth
-      - checkpoints/dr_drift_256/loss_log.txt
-      - checkpoints/dr_drift_256/loss.png
+    - checkpoints/dr_drift_256/latest_net_d_a.pth
+    - checkpoints/dr_drift_256/latest_net_d_b.pth
+    - checkpoints/dr_drift_256/latest_net_g_a_to_b.pth
+    - checkpoints/dr_drift_256/latest_net_g_b_to_a.pth
+    - checkpoints/dr_drift_256/loss_log.txt
+    - checkpoints/dr_drift_256/loss.png
   test_dr_drift_256:
     cmd: python3 test.py
     deps:
@@ -25,12 +25,11 @@ stages:
     outs:
     - results/dr_drift_256/images
   make_video_dr_drift_256:
-    cmd: python3 -m simulation.utils.machine_learning.data.images_to_video --image_pattern
-      results/dr_drift_256/images/fake_a/%d.png --output_file results/dr_drift_256/fake_a.mp4
-      && python3 -m simulation.utils.machine_learning.data.images_to_video --image_pattern
-      results/dr_drift_256/images/real_b/%d.png --output_file results/dr_drift_256/real_b.mp4
-      && ffmpeg -y -i results/dr_drift_256/real_b.mp4 -i results/dr_drift_256/fake_a.mp4
-      -filter_complex vstack=inputs=2 results/dr_drift_256/stacked.mp4
+    cmd: python3 -m simulation.utils.machine_learning.data.images_to_video --image_pattern results/dr_drift_256/images/fake_a/%d.png
+      --output_file results/dr_drift_256/fake_a.mp4 && python3 -m simulation.utils.machine_learning.data.images_to_video
+      --image_pattern results/dr_drift_256/images/real_b/%d.png --output_file results/dr_drift_256/real_b.mp4
+      && ffmpeg -y -i results/dr_drift_256/real_b.mp4 -i results/dr_drift_256/fake_a.mp4 -filter_complex
+      vstack=inputs=2 results/dr_drift_256/stacked.mp4
     deps:
     - results/dr_drift_256/images/fake_a
     - results/dr_drift_256/images/real_b
@@ -41,20 +40,20 @@ stages:
   test_discriminators_dr_drift_256:
     cmd: python3 test_discriminators.py
     deps:
-      - ./../../../../data/real_images/maschinen_halle_parking
-      - ./../../../../data/simulated_images/test_images
-      - checkpoints/dr_drift_256/latest_net_g_a_to_b.pth
-      - checkpoints/dr_drift_256/latest_net_g_b_to_a.pth
-      - checkpoints/dr_drift_256/latest_net_d_a.pth
-      - checkpoints/dr_drift_256/latest_net_d_b.pth
-      - test_discriminators.py
-      - configs/base_options.py
-      - configs/test_options.py
+    - ./../../../../data/real_images/maschinen_halle_parking
+    - ./../../../../data/simulated_images/test_images
+    - checkpoints/dr_drift_256/latest_net_g_a_to_b.pth
+    - checkpoints/dr_drift_256/latest_net_g_b_to_a.pth
+    - checkpoints/dr_drift_256/latest_net_d_a.pth
+    - checkpoints/dr_drift_256/latest_net_d_b.pth
+    - test_discriminators.py
+    - configs/base_options.py
+    - configs/test_options.py
     outs:
-      - results/dr_drift_256/discriminator_losses.txt
+    - results/dr_drift_256/discriminator_losses.txt
   stacked_gif_dr_drift_256:
-    cmd: python3 ../data/video_to_gif.py --input_file results/dr_drift_256/stacked.mp4
-      --output_file results/dr_drift_256/stacked.gif --width 400 --length 10
+    cmd: python3 ../data/video_to_gif.py --input_file results/dr_drift_256/stacked.mp4 --output_file
+      results/dr_drift_256/stacked.gif --width 400 --length 10
     deps:
     - results/dr_drift_256/stacked.mp4
     outs:
