--- a/data/simulated_images/dvc.yaml
+++ b/data/simulated_images/dvc.yaml
@@ -1,25 +1,22 @@
 stages:
   create_simulated_images:
-    cmd: python3 -m simulation.utils.machine_learning.data.extract_simulated_images
-     --road ci_roads/random_road --seed kitcar1 kitcar2 kitcar3 kitcar4 kitcar5 kitcar6
-      kitcar7 kitcar8 kitcar9 kitcar10 kitcar11 kitcar12 kitcar13 kitcar14 kitcar15
-      kitcar16 kitcar17 kitcar18 kitcar19 kitcar20 kitcar21 kitcar22 kitcar23 kitcar24
-      kitcar25 kitcar26 kitcar27 kitcar28 kitcar29 kitcar30 kitcar31 kitcar32 kitcar33
-      kitcar34 kitcar35 kitcar36 kitcar37 kitcar38 kitcar39 kitcar40 kitcar41 kitcar42
-      kitcar43 kitcar44 kitcar45 kitcar46 kitcar47 kitcar48 kitcar49 kitcar40 kitcar51
-      kitcar52 kitcar53 kitcar54 kitcar55 kitcar56 kitcar57 kitcar58 kitcar59 kitcar60
-      kitcar61 --output_dir random_roads --image_topic /camera/image_raw && fdupes
-      -dN random_roads/            # Remove duplicates
+    cmd: python3 -m simulation.utils.machine_learning.data.extract_simulated_images --road ci_roads/random_road
+      --seed kitcar1 kitcar2 kitcar3 kitcar4 kitcar5 kitcar6 kitcar7 kitcar8 kitcar9 kitcar10
+      kitcar11 kitcar12 kitcar13 kitcar14 kitcar15 kitcar16 kitcar17 kitcar18 kitcar19 kitcar20
+      kitcar21 kitcar22 kitcar23 kitcar24 kitcar25 kitcar26 kitcar27 kitcar28 kitcar29 kitcar30
+      kitcar31 kitcar32 kitcar33 kitcar34 kitcar35 kitcar36 kitcar37 kitcar38 kitcar39 kitcar40
+      kitcar41 kitcar42 kitcar43 kitcar44 kitcar45 kitcar46 kitcar47 kitcar48 kitcar49 kitcar40
+      kitcar51 kitcar52 kitcar53 kitcar54 kitcar55 kitcar56 kitcar57 kitcar58 kitcar59 kitcar60
+      kitcar61 --output_dir random_roads --image_topic /camera/image_raw && fdupes -dN random_roads/ # Remove duplicates
     deps:
     - ../../simulation/models/env_db/ci_roads/random_road.py
     - ../../simulation/models/meshes
     outs:
     - random_roads
   create_test_images:
-    cmd: python3 -m simulation.utils.machine_learning.data.extract_simulated_images
-     --road ci_roads/random_road --seed TEST --output_dir test_images
-     --randomize_path 0 --image_topic /camera/image_raw
-     && fdupes -dN test_images/  # Remove duplicates
+    cmd: python3 -m simulation.utils.machine_learning.data.extract_simulated_images --road ci_roads/random_road
+      --seed TEST --output_dir test_images --randomize_path 0 --image_topic /camera/image_raw
+      && fdupes -dN test_images/ # Remove duplicates
     deps:
     - ../../simulation/models/env_db/ci_roads/random_road.py
     - ../../simulation/models/meshes
