--- a/simulation/src/gazebo_simulation/param/gazebo_rate_control/topics.yaml
+++ b/simulation/src/gazebo_simulation/param/gazebo_rate_control/topics.yaml
@@ -1,2 +1,2 @@
-set_physics: "/gazebo/set_physics_properties"
-get_physics: "/gazebo/get_physics_properties"
+set_physics: /gazebo/set_physics_properties
+get_physics: /gazebo/get_physics_properties
