--- a/simulation/src/simulation_brain_link/param/sensor_camera/topics.yaml
+++ b/simulation/src/simulation_brain_link/param/sensor_camera/topics.yaml
@@ -1,3 +1,3 @@
-pub_topic: "/simulation/sensors/prepared/camera"
-sub_topic: "/simulation/sensors/raw/camera"
+pub_topic: /simulation/sensors/prepared/camera
+sub_topic: /simulation/sensors/raw/camera
 
