--- a/simulation/src/simulation_evaluation/param/referee/topics.yaml
+++ b/simulation/src/simulation_evaluation/param/referee/topics.yaml
@@ -1,5 +1,5 @@
-info: "/simulation/referee/info"
-reset: "/simulation/referee/reset"
-prepare: "/simulation/referee/prepare"
-start: "/simulation/referee/start"
-stop: "/simulation/referee/stop"
+info: /simulation/referee/info
+reset: /simulation/referee/reset
+prepare: /simulation/referee/prepare
+start: /simulation/referee/start
+stop: /simulation/referee/stop
