--- a/simulation/src/simulation_evaluation/param/state_machine/topics.yaml
+++ b/simulation/src/simulation_evaluation/param/state_machine/topics.yaml
@@ -1,17 +1,17 @@
-info: '/simulation/state_machine/info'
+info: /simulation/state_machine/info
 
 lane:
-  get: '/simulation/state_machine/lane/get/'
-  set: '/simulation/state_machine/lane/set/'
+  get: /simulation/state_machine/lane/get/
+  set: /simulation/state_machine/lane/set/
 progress:
-  get: '/simulation/state_machine/progress/get/'
-  set: '/simulation/state_machine/progress/set/'
+  get: /simulation/state_machine/progress/get/
+  set: /simulation/state_machine/progress/set/
 overtaking:
-  get: '/simulation/state_machine/overtaking/get/'
-  set: '/simulation/state_machine/overtaking/set/'
+  get: /simulation/state_machine/overtaking/get/
+  set: /simulation/state_machine/overtaking/set/
 parking:
-  get: '/simulation/state_machine/parking/get/'
-  set: '/simulation/state_machine/parking/set/'
+  get: /simulation/state_machine/parking/get/
+  set: /simulation/state_machine/parking/set/
 priority:
-  get: '/simulation/state_machine/priority/get/'
-  set: '/simulation/state_machine/priority/set/'
+  get: /simulation/state_machine/priority/get/
+  set: /simulation/state_machine/priority/set/
